Fix menu z-index
maybe it can close #2762 :smile:

--- a/components/menu/style/index.less
+++ b/components/menu/style/index.less
@@ -89,6 +89,12 @@
     }
   }
 
+  &-horizontal,
+  &-inline,
+  &-vertical {
+    z-index: auto;
+  }
+
   &-inline,
   &-vertical {
     border-right: 1px solid @border-color-split;
